# tictactoe

./: pyproject.toml
testOrness/: db.sqlite3  manage.py
testOrness/testOrness/: asgi.py  settings.py  urls.py  wsgi.py
testOrness/ticTacToe/: models.py  serializers.py  urls.py  views.py
testOrness/ticTacToe/migrations/: 0001_initial.py
